# strawberry

./: .gitignore  README.md  audio_bridge.html  audio_ws.py  lm.py  log.py  main.py  pyproject.toml  setup.sh  vad.py
memory/: __init__.py  embedder.py  extractor.py  store.py
pixies/: __init__.py  compactor.py  page_summarizer.py  query_expander.py  search_router.py  time_parser.py  wiki_query.py
prompts/: mk1.py
sandbox/: Dockerfile  server.py
tools/: __init__.py  code.py  date_time.py  db.py  duckduckgo.py  music.py  mute.py  notes.py  powercycle.py  reset.py  search.py  shutdown.py  thinking.py  weather.py  wikipedia.py
