[project]
name = "strawberry"
version = "1.0.0"
description = "A local voice assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.12.1",
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "mutagen>=1.47.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "sounddevice>=0.5.5",
    "wikipedia>=1.4.0",
]
